[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "langchain-anthropic>=0.3.10",
    "langchain-openai>=0.3.12",
    "mcp>=1.6.0",
    "mcp-use>=1.1.5",
    "openai>=1.69.0",
    "python-dotenv>=1.1.0",
]
